QMimeData: return null string for null byte array

This is a cherry modification of 5826a7ad921930393c84b790123f493e26d0685c
in 5.15 branch.

Fixes: QTBUG-102438
Pick-to: 6.3 6.2
Change-Id: I8bdb7cb2537c6df7bb1381871b3cc2446ff1d270
Reviewed-by: Lars Knoll <lars.knoll@qt.io>